--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "@ngrx/effects": "^7.2.0",
+    "@ngrx/router-store": "^7.2.0",
+    "@ngrx/store": "^7.2.0",
+    "@ngrx/store-devtools": "^7.2.0",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.0.1",
     "core-js": "^2.5.4",
