Added tests for geting the right selectedCurrency value

--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     "@ngrx/store": "^7.2.0",
     "@ngrx/store-devtools": "^7.2.0",
     "bootstrap": "^4.3.1",
+    "build-url": "^1.2.0",
     "concurrently": "^4.0.1",
     "core-js": "^2.5.4",
+    "express": "^4.14.0",
     "font-awesome": "^4.7.0",
+    "hbs": "^4.0.1",
+    "nodemon": "^1.18.10",
+    "request": "^2.88.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
